# 1brc-php-ffi

./: .gitignore  README.md
app/: index.php  libonebrc.php
rust/onebrc/: Cargo.toml
rust/onebrc/src/: adv.rs  lib.rs
