[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.8.11"}
libc = "0.2"
nohash-hasher = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[dev-dependencies]
criterion = { version = "0.3"}

[profile.release]
lto = true
strip = true
panic = "abort"
debug = false
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib", "lib"]
bench = false
